# QWindowKitDemo

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/widgetuseuifile/: CMakeLists.txt  main.cpp  widgetuseuifile.cpp  widgetuseuifile.h  widgetuseuifile.ui
frameless/: CMakeLists.txt  framelesswidget.cpp  framelesswidget.h  topbar.cpp  topbar.h  windowbutton.h  windowbutton_p.h
frameless/private/: framelesswidget_p.h
frameless/resource/: frameless.qrc
frameless/resource/style/: dark-style.qss  light-style.qss
